# light-house-python-pdf-report

./: .gitignore  pyproject.toml
app/: chart_generator.py  config.py  lighthouse_api.py  main.py  report_generator.py
