[tool.poetry]
name = "light-house-python-pdf-report"
version = "0.1.0"
description = ""
authors = ["Johan Guse <johanguse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfkit = "^1.0.0"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.9.2"
fpdf = "^1.7.2"
requests = "^2.32.3"
plotly = "^5.24.1"
reportlab = "^4.2.2"
pandas = "^2.0.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[tool.taskipy.tasks]
lint = 'ruff check app && ruff check app --diff'
format = 'ruff check app --fix && ruff format app'
run = 'fastapi dev app/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage run -m pytest --cov=app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"